sidu-disk-center (0.1.4.2) unstable; urgency=low

  * Trace

 -- J. Hamatoma <hama@siduction.net>  Wed, 16 May 2012 21:12:17 +0200

sidu-disk-center (0.1.4.1) unstable; urgency=low

  [ J. Hamatoma ]
  * English text corrections (done by Tartie)

  [ Alf Gaida ]
  * rebuild closes #698

 -- Alf Gaida <agaida@siduction.org>  Sun, 13 May 2012 20:22:09 +0200

sidu-disk-center (0.1.4) unstable; urgency=low

  * added myself as uploader
  * bump version to 0.1.4
  * rebuid closes #686 

 -- Alf Gaida <agaida@siduction.org>  Sat, 12 May 2012 12:27:27 +0200

sidu-disk-center (0.1.3+nmu2) unstable; urgency=low

  * fixed DE translation of sidu-disk-center.conf; refs: #686

 -- Ferdinand Thommes <devil@siduction.org>  Wed, 09 May 2012 14:32:41 +0200

sidu-disk-center (0.1.3+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * fixed translation of sidu-disk-center.conf; refs: #686

 -- Ferdinand Thommes <devil@siduction.org>  Wed, 09 May 2012 13:02:30 +0200

sidu-disk-center (0.1.3) unstable; urgency=low

  * Snapshots
  * Fix: message while retrieving partition info
  * Clear of the name after creating a LV
  * Deleting LVs
  * Fix: Logo
  * Fixes #623

 -- J. Hamatoma <hama@siduction.net>  Tue, 24 Apr 2012 23:30:22 +0200

sidu-disk-center (0.1.2) unstable; urgency=low

  * first steps
  * fix: html references

 -- J. Hamatoma <hama@siduction.net>  Sat, 14 Apr 2012 13:31:20 +0200

sidu-disk-center (0.1.1) unstable; urgency=low

  * Initial release

 -- J. Hamatoma <hama@siduction.net>  Sat, 24 Mar 2012 23:44:54 +0100