@@ -43,7 +43,7 @@ diskinfo.file.demo.partinfo=/etc/sidu-disk-center/sdc_partinfo.txt
 diskinfo.file.partinfo=${tempdir}sdc_partinfo.txt
 diskinfo.wait.partinfo=5
 diskinfo.wait.partinfo.creation=30
-diskinfo.excluded.dev=loop\d|siduction-live
+diskinfo.excluded.dev=loop\d|siduction-live|sr\d+
 diskinfo.txt_wait_for_partinfo%=The partition info will be submitted. Please be patient...
 diskinfo.root.minsize.mb=1000
 diskinfo.txt_desc_vg_info%=Total / reserved / free / blocksize:
@@ -125,7 +125,7 @@ logicalview.txt_title%=Logical View on LVM Media
 logicalview.txt_headers%=|Name:|Size:|Access Rights:
 logicalview.txt_intro%=The logical view shows the logical volumes (LV) which are created in a volume group (VG). They can span over multiple physical media and can be resized at runtime. 
 logicalview.txt_action_intro%=<xml>A <b>change</b> of <b>action</b> will be effective only if <b>activate</b> has been pushed.
-logicalview.opt_action%=Create LV
+logicalview.opt_action%=Create a LV;Delete a LV
 logicalview.txt_action%=Action:
 logicalview.txt_button_action%=Activate
 logicalview.txt_button_reload%=Reload
@@ -144,6 +144,15 @@ logicalview.txt_choose_vg%=Please select a volume group (VG)!
 logicalview.txt_title_last_log%=Log of the Last Executed Action
 logicalview.desc_wait_for_command%=<xml>The following command is running:<br/><code>###COMMAND###</code>
 logicalview.txt_no_volume_groups%=At the moment there is no logical volume (VM).
+logicalview.txt_descr_del_lv%=<xml>Deletion of a logical volume (LV). <b>Please be careful</b>: The deletion <b>is final</b>!<br/>A LV can be <b>deleted only</b> if there is <b>no snapshot</b> for it.
+logicalview.txt_del_lv_lv%=LV to delete:
+logicalview.txt_button_del_lv%=Delete
+logicalview.txt_choose_lv_lv%=Please select the LV to delete!
+logicalview.txt_del_description%=<xml>For security reasons the command <b>is not executed directly</b>. Please <b>copy</b> the following command into <b>a console</b> and execute it <b>as root</b>. Then click "reload".
+logicalview.txt_snapshot_exist%=Deletion is not possible because of the existence of a snapshot.
+logicalview.txt_create_lv_fs%=Filesystem:
+logicalview.opt_create_lv_fs=-;ext4;ext3;ext2
+logicalview.txt_create_lv_label%=Label:
 
 snapshot.txt_title%=Snapshot
 snapshot.txt_headers%=|Name:|Size:|Access Rights:|Base
