@@ -44,7 +44,7 @@ diskinfo.file.demo.partinfo=/etc/sidu-disk-center/sdc_partinfo.txt
 diskinfo.file.partinfo=${tempdir}sdc_partinfo.txt
 diskinfo.wait.partinfo=5
 diskinfo.wait.partinfo.creation=30
-diskinfo.excluded.dev=loop\d|siduction-live
+diskinfo.excluded.dev=loop\d|siduction-live|sr\d+
 diskinfo.txt_wait_for_partinfo%=Die Partitionsinformationen werden ermittelt. Bitte etwas Geduld...
 diskinfo.root.minsize.mb=1000
 diskinfo.txt_desc_vg_info%=Gesamt / Belegt / Frei / Blockgröße:
@@ -151,6 +151,9 @@ logicalview.txt_button_del_lv%=Löschen
 logicalview.txt_choose_lv_lv%=Bitte zu löschendes Medium wählen!
 logicalview.txt_del_description%=<xml>Aus Sicherheitsgründen wurde der Befehl <b>nicht direkt ausgeführt</b>. Bitte untenstehenden Befehl in eine Konsole kopieren und <b>als Administrator</b> (root) ausführen. Anschließend "Neu einlesen" anklicken. 
 logicalview.txt_snapshot_exist%=Löschen nicht möglich, da mindestens ein Schnappschuss existiert.
+logicalview.txt_create_lv_fs%=Dateisystem:
+logicalview.opt_create_lv_fs=-;ext4;ext3;ext2
+logicalview.txt_create_lv_label%=Benennung (Label):
 
 snapshot.txt_title%=Schnappschuss
 snapshot.txt_headers%=|Name:|Größe:|Zugriffsrechte:|Basis-LV:
